# ordinem

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: launch.json
docs/: ARCHITECTURE.md
orchestrator/: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
orchestrator/app/: config.py  db.py  deps.py  dispatch.py  main.py  repository.py  schemas.py  state_machine.py
orchestrator/app/core/: config.py  db.py  repos.py
orchestrator/app/islands/calendar/: README.md  google_oauth.py  router.py  service.py
orchestrator/app/islands/review/: README.md  repository.py  router.py  schemas.py
orchestrator/app/islands/review/services/: git.py  review.py
orchestrator/app/islands/tickets/: README.md  commit_plans.py  dispatch.py  projects.py  repository.py  router.py  schemas.py  state_machine.py
orchestrator/app/islands/tickets/services/: agent.py  backends.py  jira.py  planner.py  policy.py
orchestrator/app/islands/todos/: README.md  router.py  service.py
orchestrator/app/routes/: calendar.py  commit_plans.py  projects.py  reviews.py  tickets.py
orchestrator/app/services/: agent.py  calendar.py  checks.py  jira.py  policy.py  pr.py  review.py
orchestrator/migrations/: 001_init.sql  002_my_tickets.sql  003_ticket_jira.sql  004_reviews.sql  005_local_tickets.sql  006_plan_dispatch.sql  007_agent_backends.sql  008_subtask_result.sql  009_awaiting_input.sql  010_google_oauth.sql  011_auto_repos.sql
orchestrator/tests/: test_calendar.py  test_dispatch.py  test_jira_search.py  test_repos.py  test_review.py  test_state_machine.py
orchestrator/tests/calendar/: test_calendar.py  test_google_oauth.py
orchestrator/tests/review/: test_repos_list.py  test_review.py
orchestrator/tests/tickets/: test_backends.py  test_dispatch.py  test_jira_search.py  test_local_tickets.py  test_plan_dispatch.py  test_state_machine.py
orchestrator/tests/todos/: test_todos.py
plans/: claude-island-plan.MD  mac-app-plan.MD
plans/design_handoff_ordinem/: COMPONENT_BUILD_PROMPT.md  README.md
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: credentials.rs  fetch.rs  lib.rs  main.rs  manifest.rs
src/api/: orchestrator.ts
src/components/: IslandPanel.vue  (+3 more)
(+26 files in other folders)
